# ManagerX-DevTools

./: .gitignore  README.md  pyproject.toml
DevTools/backend/database/: __init__.py
mx_devtools/backend/database/: __init__.py  antispam_db.py  autodelete_db.py  autorole_db.py  economy_db.py  globalchat_db.py  levelsystem_db.py  logging_db.py  notes_db.py  profile_db.py  settings_db.py  stats_db.py  vc_db.py  warn_db.py  welcome_db.py
